# Voxengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VoxymoreCore.pc.in  sign.bat
Core/: CMakeLists.txt
Core/include/Voxymore/: Voxymore.hpp
Core/include/Voxymore/Assets/: Asset.hpp  AssetField.decl.hpp  AssetField.forward.hpp  AssetField.hpp  AssetField.impl.hpp  AssetHandle.hpp  AssetImporter.hpp  AssetManager.hpp  AssetManagerBase.hpp  AssetMetadata.hpp  Assets.hpp  EditorAssetManager.hpp  RuntimeAssetManager.hpp
Core/include/Voxymore/Components/: BSplinesComponents.hpp  BezierCurve.hpp  Components.hpp  CustomComponent.hpp  GenericBezierCurve.hpp  LightComponent.hpp  ModelComponent.hpp  PrimitiveComponent.hpp  ProcLightComponents.hpp
Core/include/Voxymore/Core/: Application.hpp  Buffer.hpp  Core.hpp  EntryPoint.hpp  FileSystem.hpp  Logger.hpp  LoopBackBuffer.hpp  Macros.hpp  Math.hpp  MultiThreading.hpp  Optional.hpp  PlatformDetection.hpp  Serializable.hpp  SmartPointers.hpp  TypeHelpers.hpp  UUID.hpp  Window.hpp  YamlHelper.hpp
Core/include/Voxymore/Debug/: Gizmos.hpp  Profiling.hpp
Core/include/Voxymore/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Core/include/Voxymore/ImGUI/: ImGUILayer.hpp
Core/include/Voxymore/ImGui/: ImGuiLayer.hpp  ImGuiLib.hpp
Core/include/Voxymore/Layers/: Layer.hpp  LayerStack.hpp
Core/include/Voxymore/Math/: AABB.hpp  BoundingBox.hpp  BoundingObject.hpp  BoundingSphere.hpp  Capsule.hpp  Geometry.hpp  Image.hpp  Math.hpp  OBB.hpp  Plane.hpp  Rect.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp
Core/include/Voxymore/ParticlesPhysics/: Particle.hpp  ParticlePhysicsLayer.hpp
Core/include/Voxymore/Physics/: BroadPhaseLayerInterface.hpp  ColliderComponent.hpp  ObjectLayerPairFilter.hpp  ObjectVsBroadPhaseLayerFilter.hpp  PhysicsDebugRenderer.hpp  PhysicsLayer.hpp  PhysicsListener.hpp  PhysicsTypeHelpers.hpp  RigidbodyComponent.hpp
Core/include/Voxymore/Project/: Project.hpp  ProjectSerializer.hpp
Core/include/Voxymore/Renderer/: Buffer.hpp  Camera.hpp  Cubemap.cpp  Cubemap.hpp  Framebuffer.hpp  Gizmos.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PerspectiveCamera.hpp  RenderCommand.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  ShaderDataType.hpp  ShaderDefines.hpp  ShaderSource.hpp  ShaderType.hpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp
Core/include/Voxymore/RigidbodiesPhysics/: Primitive.hpp  Rigidbody.hpp  RigidbodyPhysicsLayer.cpp  RigidbodyPhysicsLayer.hpp
Core/include/Voxymore/Scene/: Entity.decl.hpp  Entity.impl.hpp  Scene.decl.hpp  Scene.impl.hpp  SceneCamera.hpp  SceneManager.hpp  SceneSerializer.hpp  Systems.hpp
Core/include/Voxymore/Serializer/: Data.cpp  Data.hpp
Core/include/Voxymore/Terrain/: Terrain.hpp  TerrainLayer.hpp
Core/include/Voxymore/Utils/: Platform.hpp
Core/platform/: CMakeLists.txt
Core/platform/OpenGL/: CMakeLists.txt
Core/platform/other/: CMakeLists.txt
Core/src/: ThirdPartiesImplementor.cpp
Core/src/Assets/: Asset.cpp  AssetHandle.cpp  AssetImporter.cpp  AssetManager.cpp  AssetManagerBase.cpp  Assets.cpp  EditorAssetManager.cpp  RuntimeAssetManager.cpp
Core/src/Assets/ImGui/: MaterialImGui.cpp  MeshImGui.cpp  SceneImGui.cpp  ShaderImGui.cpp  TextureImGui.cpp
Core/src/Assets/Importers/: MaterialSerializer.cpp  MeshImporter.cpp  SceneImporter.cpp  ShaderSerializer.cpp  TextureImporter.cpp
Core/src/Components/: BSplinesComponents.cpp  BezierCurve.cpp  CustomComponent.cpp  GenericBezierCurve.cpp  LightComponent.cpp  ModelComponent.cpp  PrimitiveComponent.cpp  ProcLightComponents.cpp
Core/src/Core/: Application.cpp  Buffer.cpp  FileSystem.cpp  Logger.cpp  UUID.cpp  YamlHelper.cpp
Core/src/Debug/: Gizmos.cpp
Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLib.cpp
Core/src/Layers/: Layer.cpp  LayerStack.cpp
Core/src/Math/: AABB.cpp  BoundingBox.cpp  BoundingSphere.cpp  Capsule.cpp  Geometry.cpp  Image.cpp  Math.cpp  OBB.cpp  Plane.cpp  Rect.cpp  Sphere.cpp  Triangle.cpp
Core/src/ParticlesPhysics/: Particle.cpp  ParticlePhysicsLayer.cpp
Core/src/ParticlesPhysics/Collisions/: ParticleContact.cpp  (+1 more)
Core/src/Physics/: BroadPhaseLayerInterface.cpp  ColliderComponent.cpp  ObjectLayerPairFilter.cpp  ObjectVsBroadPhaseLayerFilter.cpp  PhysicsDebugRenderer.cpp  PhysicsLayer.cpp  PhysicsListener.cpp  RigidbodyComponent.cpp
Core/src/Project/: Project.cpp  ProjectSerializer.cpp
Core/src/Renderer/: Buffer.cpp  Cubemap.cpp  EditorCamera.cpp  GLTFHelper.cpp  GLTFHelper.hpp  Gizmos.cpp  Material.cpp  Mesh.cpp  Model.cpp  PerspectiveCamera.cpp  Renderer.cpp  Shader.cpp  ShaderSource.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
Core/src/RigidbodiesPhysics/: Primitive.cpp  Rigidbody.cpp  RigidbodyPhysicsLayer.cpp
Core/src/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneManager.cpp  SceneSerializer.cpp  Systems.cpp
Core/src/Terrain/: Terrain.cpp  TerrainLayer.cpp
Voxengine/: CMakeLists.txt  imgui.ini
Voxengine/EditorAssets/Meshes/: cube.glb  icosphere.glb  sphere.glb
Voxengine/EditorAssets/Shaders/: Bezier.geom  Bezier.tessco  Bezier.tessev  DefaultShader.frag  DefaultShader.glsl  DefaultShader.vert  DeferredAccumulate.frag  DeferredAccumulate.vert  DeferredRender.frag  DeferredRender.vert  FlatColor.frag  FlatColor.glsl  FlatColor.vert  Gizmos.frag  Gizmos.vert  TextureShader.frag  TextureShader.glsl  TextureShader.vert
Voxengine/src/: Voxengine.cpp
Voxengine/src/Editor/: EditorLayer.cpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
lib/hash-library/: CMakeLists.txt
lib/hash-library/src/: crc32.cpp  keccak.cpp  md5.cpp  sha1.cpp  sha256.cpp  sha3.cpp
lib/tracy/: CMakeLists.txt  version.cmake
lib/vulkan/: CMakeLists.txt
platform/: CMakeLists.txt
platform/Linux/: CMakeLists.txt
platform/MacOS/: CMakeLists.txt
platform/OpenGL/: CMakeLists.txt
platform/Windows/: CMakeLists.txt
platform/other/: CMakeLists.txt  DefaultInput.cpp  DefaultInput.hpp  DefaultWindow.cpp  DefaultWindow.hpp
platform/other/Voxymore/: DefaultInput.cpp  DefaultInput.hpp  DefaultWindow.cpp  DefaultWindow.hpp
(+438 files in other folders)
